# playing-card-recognizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
artifacts/: class_to_idx.json.dvc
artifacts/checkpoints/: .gitignore  efficientnet_b0.dvc
card_recognizer/: commands.py
card_recognizer/data/: datamodule.py  download.py  inspect.py  transforms.py  validate.py
card_recognizer/evaluation/: evaluate.py  metrics.py  plots.py
card_recognizer/export/: benchmark_tensorrt.py  export_onnx.py  export_tensorrt.py  validate_onnx.py
card_recognizer/inference/: checkpoint.py
card_recognizer/models/: baseline_cnn.py  efficientnet.py  factory.py  lightning_module.py
card_recognizer/selection/: model_selection.py  select_best_model.py
card_recognizer/serving/: __init__.py  triton_client.py  triton_repository.py
card_recognizer/training/: finetuning.py  mlflow_utils.py  plots.py  train.py
card_recognizer/utils/: git.py
configs/: config.yaml
configs/data/: cards.yaml
configs/evaluation/: default.yaml
configs/export/: onnx.yaml  tensorrt.yaml
configs/inference/: local.yaml
docs/: colab_training.md
scripts/: colab_setup.sh  run_colab_mlflow_server.sh  run_mlflow_server.sh  run_triton_server.sh
tests/: test_checkpoint_resolution.py  test_configs.py  test_data_validation.py  test_datamodule.py  test_efficientnet.py  test_evaluation_metrics.py  test_git_utils.py  test_lightning_module.py  test_mlflow_utils.py  test_model_selection.py  test_models.py  test_package.py  test_plots.py  test_triton_repository.py
(+15 files in other folders)
