[project]
name = "playing-card-recognizer"
version = "0.1.0"
description = "Playing card image classification with a reproducible MLOps pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Kirill Morozov" }
]
dependencies = [
    "dvc>=3.67.1",
    "hydra-core>=1.3.3",
    "kaggle>=2.2.2",
    "lightning>=2.6.5",
    "matplotlib>=3.11.0",
    "mlflow==3.14.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "pandas>=2.2,<3",
    "pillow>=12.2.0",
    "protobuf>=5.29,<6",
    "rich>=15.0.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "tritonclient[http]>=2.69.0",
]

[project.scripts]
card-recognizer = "card_recognizer.commands:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "card_recognizer"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
